tests/snapshots/examples_fixtures/Modules__FunctionalUtils.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/FunctionalUtils.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E076]: UNCLOSED DELIMITER

Expected a closing `}` to match this opening `{`.

  --> examples/Modules/FunctionalUtils.flx:4:32
  |
4 | module Modules.FunctionalUtils {
  |                                ^


--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found ||.

  --> examples/Modules/FunctionalUtils.flx:8:14
  |
8 |             [||]
  |              ^^


--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found else.

  --> examples/Modules/FunctionalUtils.flx:9:11
  |
9 |         } else {
  |           ^^^^


--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found ||.

  --> examples/Modules/FunctionalUtils.flx:17:14
   |
17 |             [||]
   |              ^^


--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found else.

  --> examples/Modules/FunctionalUtils.flx:18:11
   |
18 |         } else {
   |           ^^^^

Found 5 errors.
== stdout ==
<not executed>
